src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Campaign_List_Error_Message__c</fullName>
        <description>If there was an error while attempting to update this Campaign using a Campaign List, then this field will show that error message.</description>
        <label>Campaign List Refresh Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_List_Last_Updated__c</fullName>
        <description>This contains the date/time of when this Campaign was last successfully populated by a Campaign List</description>
        <label>Campaign List Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Campaign_List_Mutex__c</fullName>
        <description>This field indicates whether a mutex/lock is placed on this Campaign object.  A time value in this field indicates that a lock is in place, and the time when the lock was placed.  A null value in this field indicates no lock is being held.  This field must be updated atomically to avoid concurrency issues.</description>
        <label>Campaign List Mutex</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Campaign_List_Refresh_Automatically__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should this Campaign be automatically updated from its Campaign List sources on a regular, automated schedule?</description>
        <label>Automatically Refresh Campaign List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_List_Update_Status__c</fullName>
        <description>This tracks the status of updating this Campaign from a campaign list</description>
        <label>Campaign List Update Status</label>
        <picklist>
            <picklistValues>
                <fullName>Queued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aborted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign List</label>
        <referenceTo>Segment__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>